ultimos cambios entrega

--- a/Dossier/index.html
+++ b/Dossier/index.html
@@ -9,11 +9,11 @@
 
     <div class="tfg-container">
 
-        <section class="info-box">
+        <section class="datos">
             <h2>Trabajo de Fin de Grado</h2>
             <img src="./index_requirements/cabecera.jpeg" alt="Cabecera TFG" class="header-img">
 
-            <div class="info-datos">
+            <div class="informacion">
                 <p><strong>Alumno:</strong> Pau Montesinos I Caliz</p>
                 <p><strong>Grado:</strong> Ingeniería de Datos, UAB</p>
                 <p><strong>Tutor:</strong> Oriol Cortés Comelles</p>
@@ -21,43 +21,93 @@
             </div>
         </section>
 
-        <section class="contenido-box">
-            <h1>📁 Informes</h1>
+        <section class="archivos">
+            <h1>Informes</h1>
 
             <h2>Informe Inicial</h2>
             <ul>
-                <li><a href="./Informes/Informe Inicial/Informe Inicial Previo.pdf" target="_blank"><img src="index_requirements/pdf_icon2.png" class="icono-pdf"> Previo</a></li>
-                <li><a href="./Informes/Informe Inicial/Informe Inicial Entregado.pdf" target="_blank"><img src="index_requirements/pdf_icon2.png" class="icono-pdf"> Entregado</a></li>
-                <li><a href="./Informes/Informe Inicial/Informe Inicial Mejorado.pdf" target="_blank"><img src="index_requirements/pdf_icon2.png" class="icono-pdf"> Mejorado</a></li>
-                <li><a href="./Informes/Informe Inicial/Lista de Cambios Informe Inicial.pdf" target="_blank"><img src="index_requirements/pdf_icon2.png" class="icono-pdf"> Lista de Cambios</a></li>
+                <li><a href="./Informes/Informe Inicial/Informe Inicial Previo.pdf" target="_blank"><img src="index_requirements/pdf_icon2.png" class="icono"> Previo</a></li>
+                <li><a href="./Informes/Informe Inicial/Informe Inicial Entregado.pdf" target="_blank"><img src="index_requirements/pdf_icon2.png" class="icono"> Entregado</a></li>
+                <li><a href="./Informes/Informe Inicial/Informe Inicial Mejorado.pdf" target="_blank"><img src="index_requirements/pdf_icon2.png" class="icono"> Mejorado</a></li>
+                <li><a href="./Informes/Informe Inicial/Lista de Cambios Informe Inicial.pdf" target="_blank"><img src="index_requirements/pdf_icon2.png" class="icono"> Lista de Cambios</a></li>
             </ul>
 
             <h2>Informe Progreso I</h2>
             <ul>
-                <li><a href="./Informes/Informe Progreso I/Informe Progreso I Previo.pdf" target="_blank"><img src="index_requirements/pdf_icon2.png" class="icono-pdf"> Previo</a></li>
-                <li><a href="./Informes/Informe Progreso I/Informe Progreso I Entregado.pdf" target="_blank"><img src="index_requirements/pdf_icon2.png" class="icono-pdf"> Entregado</a></li>
-                <li><a href="./Informes/Informe Progreso I/Informe Progreso I Mejorado.pdf" target="_blank"><img src="index_requirements/pdf_icon2.png" class="icono-pdf"> Mejorado</a></li>
-                <li><a href="./Informes/Informe Progreso I/Lista de Cambios Informe de Progreso I.pdf" target="_blank"><img src="index_requirements/pdf_icon2.png" class="icono-pdf"> Lista de Cambios</a></li>
+                <li><a href="./Informes/Informe Progreso I/Informe Progreso I Previo.pdf" target="_blank"><img src="index_requirements/pdf_icon2.png" class="icono"> Previo</a></li>
+                <li><a href="./Informes/Informe Progreso I/Informe Progreso I Entregado.pdf" target="_blank"><img src="index_requirements/pdf_icon2.png" class="icono"> Entregado</a></li>
+                <li><a href="./Informes/Informe Progreso I/Informe Progreso I Mejorado.pdf" target="_blank"><img src="index_requirements/pdf_icon2.png" class="icono"> Mejorado</a></li>
+                <li><a href="./Informes/Informe Progreso I/Lista de Cambios Informe de Progreso I.pdf" target="_blank"><img src="index_requirements/pdf_icon2.png" class="icono"> Lista de Cambios</a></li>
             </ul>
 
             <h2>Informe Progreso II</h2>
             <ul>
-                <li><a href="./Informes/Informe Progreso II/Informe Progreso II Previo.pdf" target="_blank"><img src="index_requirements/pdf_icon2.png" class="icono-pdf"> Previo</a></li>
-                <li><a href="./Informes/Informe Progreso II/Informe Progreso II Entregado.pdf" target="_blank"><img src="index_requirements/pdf_icon2.png" class="icono-pdf"> Entregado</a></li>
-                <li><a href="./Informes/Informe Progreso II/Informe Progreso II Mejorado.pdf" target="_blank"><img src="index_requirements/pdf_icon2.png" class="icono-pdf"> Mejorado</a></li>
-                <li><a href="./Informes/Informe Progreso II/Lista de Cambios Informe de Progreso II.pdf" target="_blank"><img src="index_requirements/pdf_icon2.png" class="icono-pdf"> Lista de Cambios</a></li>
+                <li><a href="./Informes/Informe Progreso II/Informe Progreso II Previo.pdf" target="_blank"><img src="index_requirements/pdf_icon2.png" class="icono"> Previo</a></li>
+                <li><a href="./Informes/Informe Progreso II/Informe Progreso II Entregado.pdf" target="_blank"><img src="index_requirements/pdf_icon2.png" class="icono"> Entregado</a></li>
+                <li><a href="./Informes/Informe Progreso II/Informe Progreso II Mejorado.pdf" target="_blank"><img src="index_requirements/pdf_icon2.png" class="icono"> Mejorado</a></li>
+                <li><a href="./Informes/Informe Progreso II/Lista de Cambios Informe de Progreso II.pdf" target="_blank"><img src="index_requirements/pdf_icon2.png" class="icono"> Lista de Cambios</a></li>
             </ul>
 
             <h2>Informe Final</h2>
             <ul>
-                <li><a href="./Informes/Informe Final/Informe Final.pdf" target="_blank"><img src="index_requirements/pdf_icon2.png" class="icono-pdf"> Informe Final</a></li>
+                <li><a href="./Informes/Informe Final/Informe Final TFG Pau.pdf" target="_blank"><img src="index_requirements/pdf_icon2.png" class="icono"> Informe Final</a></li>
             </ul>
 
-            <h1>💻 Código</h1>
+            <h1>Código y diseño</h1>
+
+            <h2>Diseño de Inicio de Proyecto de la Plataforma</h2>
             <ul>
-                <li><a href="https://github.com/usuario/tfg-codigo" target="_blank"><img src="index_requirements/pdf_icon2.png" class="icono-pdf"> Repositorio GitHub</a></li>
-                <li><a href="./Codigo/codigo_comentado.pdf" target="_blank"><img src="index_requirements/pdf_icon2.png" class="icono-pdf"> Código Comentado (PDF)</a></li>
-                <li><a href="./Codigo/explicacion_modelos.txt" target="_blank"><img src="index_requirements/pdf_icon2.png" class="icono-pdf"> Explicación de Modelos</a></li>
+                <li><a href="./Diseño Inicial Plataforma/diseño_inicial_plataforma.pdf" target="_blank"><img src="index_requirements/pdf_icon2.png" class="icono">Diseño Inicial Plataforma</a></li>
+            </ul>
+
+            <h2>Desarrollo</h2>
+            <ul>
+                <li><strong>Limpieza de Datasets</strong></li>
+                <li><a href="./Codigo/Development/clean_datasets/Cancer/clean.py" target="_blank"><img src="index_requirements/python_icon.png" class="icono">Cancer</a></li>
+                <li><a href="./Codigo/Development/clean_datasets/HeartDisease/clean.py" target="_blank"><img src="index_requirements/python_icon.png" class="icono">Enfermedades al Corazón</a></li>
+                <li><a href="./Codigo/Development/clean_datasets/Stroke/clean.py" target="_blank"><img src="index_requirements/python_icon.png" class="icono">Ictus</a></li>
+
+                <li><strong>Modelos Machine Learning</strong></li>
+                <li><a href="./Codigo/Development/ml_models/models/LogisticRegression.py" target="_blank"><img src="index_requirements/python_icon.png" class="icono">Regresión Logística</a></li>
+                <li><a href="./Codigo/Development/ml_models/models/RandomForest.py" target="_blank"><img src="index_requirements/python_icon.png" class="icono">Random Forest</a></li>
+                <li><a href="./Codigo/Development/ml_models/models/XGBoost.py" target="_blank"><img src="index_requirements/python_icon.png" class="icono">XGBoost</a></li>
+
+                <li><strong>Funciones Comunes y Entrenamiento</strong></li>
+                <li><a href="./Codigo/Development/utils.py" target="_blank"><img src="index_requirements/python_icon.png" class="icono">Funciones Comunes</a></li>
+                <li><a href="./Codigo/Development/ml_models/train_model.py" target="_blank"><img src="index_requirements/python_icon.png" class="icono">Entrenamiento de los Modelos</a></li>
+            </ul>
+
+            <h2>Google Colab (DL)</h2>
+            <ul>
+                <li><a href="./Codigo/Google Colab (DL)/Google Colab Code.ipynb" target="_blank"><img src="index_requirements/jupyter_icon.webp" class="icono">IPYNB</a></li>
+                <li><a href="./Codigo/Google Colab (DL)/Google Colab Code.html" target="_blank"><img src="index_requirements/html_icon.png" class="icono">HTML</a></li>
+            </ul>
+
+            <h2>Plataforma Web</h2>
+            <ul>
+                <li><strong>Archivos Python</strong></li>
+                <li><a href="./Codigo/Web Platform/app.py" target="_blank"><img src="index_requirements/python_icon.png" class="icono">Despliegue de Plataforma</a></li>
+                <li><a href="./Codigo/Web Platform/riesgos.py" target="_blank"><img src="index_requirements/python_icon.png" class="icono">Cálculo de Riesgos</a></li>
+
+                <li><strong>Archivos HTML</strong></li>
+                <li><a href="./Codigo/Web Platform/templates/corazon.html" target="_blank"><img src="index_requirements/html_icon.png" class="icono">Pantalla Formulario Corazón</a></li>
+                <li><a href="./Codigo/Web Platform/templates/ictus.html" target="_blank"><img src="index_requirements/html_icon.png" class="icono">Pantalla Formulario Ictus</a></li>
+                <li><a href="./Codigo/Web Platform/templates/menu-principal.html" target="_blank"><img src="index_requirements/html_icon.png" class="icono">Pantalla Menu Principal</a></li>
+                <li><a href="./Codigo/Web Platform/templates/resultados.html" target="_blank"><img src="index_requirements/html_icon.png" class="icono">Pantalla de Resultados</a></li>
+                <li><a href="./Codigo/Web Platform/templates/sign_in.html" target="_blank"><img src="index_requirements/html_icon.png" class="icono">Pantalla de Inicio</a></li>
+
+                <li><strong>Archivos CSS</strong></li>
+                <li><a href="./Codigo/Web Platform/static/formulario.css" target="_blank"><img src="index_requirements/css_icon.png" class="icono">Estilo de los Formularios</a></li>
+                <li><a href="./Codigo/Web Platform/static/menu-principal-css.css" target="_blank"><img src="index_requirements/css_icon.png" class="icono">Estilo del Menú Principal</a></li>
+                <li><a href="./Codigo/Web Platform/static/resultado.css" target="_blank"><img src="index_requirements/css_icon.png" class="icono">Estilo de los Resultados</a></li>
+                <li><a href="./Codigo/Web Platform/static/sign_in.css" target="_blank"><img src="index_requirements/css_icon.png" class="icono">Estilo de la Pantalla de Inicio</a></li>
+            </ul>
+
+            <h2>Pruebas y Archivos en desuso</h2>
+            <ul>
+                <li><a href="./Codigo/Deprecated and Testing/Clean_dataset.py" target="_blank"><img src="index_requirements/python_icon.png" class="icono">Limpieza de Dataset</a></li>
+                <li><a href="./Codigo/Deprecated and Testing/Split_Dataset.py" target="_blank"><img src="index_requirements/python_icon.png" class="icono">Dividir Dataset</a></li>
+                <li><a href="./Codigo/Deprecated and Testing/pruebas.py" target="_blank"><img src="index_requirements/python_icon.png" class="icono">Pruebas</a></li>
             </ul>
         </section>
 
